--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fontanelli</title>
 </head>
+
 <body>
-   Bem Vindo! 
+    <h1>yas</h1>
+    <p>
+        Beyoncé Giselle Knowles-Carter, é uma cantora, compositora, atriz, modelo, dançarina, empresária, estilista,
+        produtora, diretora e roteirista americana. Referida como "Queen Bey", ela tem sido amplamente reconhecida por
+        seu talento artístico, voz e apresentações ao vivo.
+    </p>
+    Bem Vindo!
 </body>
+
 </html>
