--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>yas</h1>
+    <img src="download.jpeg" alt="">
     <p>
         Beyoncé Giselle Knowles-Carter, é uma cantora, compositora, atriz, modelo, dançarina, empresária, estilista,
         produtora, diretora e roteirista americana. Referida como "Queen Bey", ela tem sido amplamente reconhecida por
